# minilamb

./: .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  clippy.toml  justfile  sort-derives.toml
.github/workflows/: ci.yml
examples/: demo.rs
src/: engine.rs  expr.rs  lexer.rs  lib.rs  parser.rs
tests/: integration_test.rs
